install(
  FILES config/econet.cfg config/phroms.cfg config/roms.cfg config/roms_torch.cfg config/roms_bbc.cfg
  media/discs/econet_level_1_utils.ssd media/discs/econet_level_2_utils.ssd
  media/discs/games.ssd media/discs/master_welcome.adl media/discs/test.ssd 
  media/discs/welcome.ssd media/discs/bbcmaster512-disc1-dosplusboot.adl 
  media/discs/cpm_utilities_disc.dsd 
  media/scsi/sasi0.dat 
  media/scsi/scsi0.dat media/scsi/scsi0.dsc 
  media/scsi/scsi1.dat media/scsi/scsi1.dsc 
  media/scsi/scsi2.dat media/scsi/scsi2.dsc 
  media/scsi/scsi3.dat media/scsi/scsi3.dsc 
  media/tapes/test.uef 
  phroms/phroma phroms/phromsus.txt phroms/phromus 
  resources/icon.bmp resources/relayoff.snd resources/relayon.snd 
  resources/teletext.fnt resources/font10x16.bmp resources/font5x8.bmp 
  roms/bbc/adfs-1.30.rom roms/bbc/basic2.rom roms/bbc/dnfs.rom 
  roms/bbc/mcp120.cbl roms/bbc/os12.rom roms/bbc/wdfs.rom 
  roms/bbc/ats-3.0-1.rom 
  roms/bbcint/basic2.rom roms/bbcint/dnfs.rom roms/bbcint/ibos.rom 
  roms/bbcint/os12.rom roms/bbcint/wdfs.rom 
  roms/bplus/adfs-1.30.rom roms/bplus/b+mos.rom roms/bplus/basic2.rom 
  roms/bplus/dfs-2.26.rom roms/bplus/wdfs.rom 
  roms/m128/adfs.rom roms/m128/adfs1-53.rom roms/m128/anfs-4.25-2201351.rom 
  roms/m128/basic4.rom roms/m128/dfs.rom roms/m128/edit.rom 
  roms/m128/mcp122.abm roms/m128/mos.rom roms/m128/terminal.rom 
  roms/m128/view.rom roms/m128/viewsht.rom roms/m128/ats-3.0-1.rom 
  roms/other/6502tube.rom roms/other/ccpn102.rom roms/other/hibasic3.rom 
  roms/other/z80.rom roms/other/bios.rom 
  state/cmos.ram
  TYPE DATA)
